# tracemux

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  clippy.toml  deny.toml  justfile  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  task.yml
.github/skills/add-decoder/: SKILL.md
.github/skills/add-framer/: SKILL.md
.github/skills/add-importer/: SKILL.md
.github/skills/add-sink/: SKILL.md
.github/skills/add-source/: SKILL.md
.github/skills/add-ui-panel/: SKILL.md
.github/skills/investigate-log/: SKILL.md
.github/skills/perf-tune/: SKILL.md
.github/skills/release/: SKILL.md
.github/skills/repro-channel/: SKILL.md
.github/workflows/: ci.yml  label-critical.yml
app-tauri/: README.md  package.json
app-tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app-tauri/src-tauri/capabilities/: default.json
app-tauri/src-tauri/src/: lib.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: ai_verify.rs  json_schema.rs  main.rs
crates/cli/src/cmd/: connect.rs  detect.rs  export.rs  extcap.rs  import.rs  log.rs  mod.rs  profile.rs  send.rs  spec.rs  watch.rs
crates/cli/src/schemas/: ai-verify.schema.json  detect.schema.json  version.schema.json  watch-frame.schema.json
crates/cli/tests/: cli_compat.rs  import_export_roundtrip.rs  log_classify.rs  repo_policy.rs
crates/core/: Cargo.toml
crates/core/benches/: framer_line.rs  packet_summary.rs
crates/core/src/: classify.rs  codec.rs  error_id.rs  eventbus.rs  lib.rs  metrics.rs  packet_summary.rs  secret.rs  session_name.rs
crates/core/src/config/: migrate.rs  mod.rs  schema_v1.rs
crates/core/src/decoder/: json_lines.rs  mod.rs  nmea.rs  passthrough.rs  utf8_text.rs
crates/core/src/detect/: content.rs  mod.rs  pcap.rs  serial.rs  tcp.rs  udp.rs
crates/core/src/exporter/: csv.rs  encoding.rs  jsonl.rs  mod.rs  pcapng.rs  text.rs  timestamp.rs
crates/core/src/framer/: length_prefixed.rs  line.rs  mod.rs  passthrough.rs  regex_framer.rs
crates/core/src/importer/: csv.rs  mod.rs  pcapng.rs  teraterm.rs  text.rs
crates/core/src/log/: clock_table.rs  frames.rs  group_commit.rs  index.rs  lines.rs  mod.rs  raw.rs  retention.rs  rotate.rs  schemas.rs  wal.rs
crates/core/src/logsink/: fanout.rs  file.rs  mod.rs
crates/core/src/session/: fanout.rs  mod.rs  registry.rs  ring.rs
crates/core/src/sink/: mock.rs  mod.rs  process.rs  pty.rs  serial.rs  tcp.rs  udp.rs
crates/core/src/source/: can_stub.rs  etw_stub.rs  file.rs  http_webhook.rs  journald_stub.rs  mock.rs  mod.rs  mqtt.rs  pcap.rs  pipe.rs  process.rs  pty.rs  remote_stub.rs  replay.rs  rtt_stub.rs  serial.rs  ssh_stub.rs  syslog.rs  tcp.rs  telnet_stub.rs  udp.rs  visa_stub.rs  wineventlog_stub.rs
crates/core/src/time/: clock_sync.rs  mod.rs  monotonic.rs  node_clock_table.rs  system.rs
crates/core/src/timeseries/: mod.rs  parquet.rs
crates/core/tests/: api_surface.rs  example_configs.rs  source_pcap.rs  source_serial.rs
crates/fuzz/: .gitignore  Cargo.toml  README.md
crates/fuzz/fuzz_targets/: decoder.rs  framer.rs  index_jsonl.rs  telnet_iac.rs  vt_escape.rs  wire_proto.rs
crates/replay/: Cargo.toml
crates/replay/src/: lib.rs
crates/replay/tests/: log_compat.rs
crates/server/: Cargo.toml
crates/server/src/: ai_api.rs  annotation_api.rs  audit.rs  auth.rs  clientlog.rs  coalesce.rs  export_api.rs  fingerprint.rs  hold.rs  ingest.rs  lib.rs  mux.rs  panel_priority.rs  pcap_runner.rs  range.rs  ratelimit.rs  remote_mirror.rs  routes.rs  runner.rs  source_manager.rs  tls.rs  wire.rs  ws.rs
crates/server/tests/: wire_compat.rs  ws_integration.rs
docs/: architecture.md  invariants.md  requirements.md  rtm.md  structure.md
docs/adr/: 0001-foundations.md  0002-server-owned-annotations.md  0003-live-snaplen-truncation-signalling.md  0004-conpty-interactive-terminal-and-wire-resize.md  0005-propagate-terminal-input-defaults-to-clients.md  0006-bulk-encoding-and-time-windowed-detection.md  template.md
docs/dev/: packet-capture-dependencies.md  packet-capture-design.md  packet-capture-implementation-plan.md  packet-capture-live-setup.md  packet-capture-mvp.md  packet-capture-requirements-draft.md  pr-development-to-main.md  remote-com-ai.md  v0.1.0-change-list.md  virtual-peer.md
docs/errors/: E-1001.md  E-1002.md  E-1003.md  E-1101.md  E-1102.md  E-1103.md  E-1104.md  E-1105.md  E-1106.md  E-1107.md  E-1301.md  E-1401.md  E-1402.md  E-2001.md  E-2002.md  E-2101.md  E-2102.md  E-2103.md  E-4001.md  E-4002.md  README.md
docs/guides/: README.md  auth-and-tls.md  first-session.md  getting-started-windows.md  performance-capacity.md  source-specs.md
docs/protocols/: log-format.md  timestamp.md  wire-protocol.md
examples/: README.md  mock.toml  multi-source.toml  packet-capture.toml  serial.toml  tcp-listener.toml  windows-shell.toml
fixtures/source/serial/: PROVENANCE.md
scripts/: ai-verify-summary.ps1  ai-verify-summary.sh  check-encoding.ps1  check-encoding.sh  dev-all-with-peer.ps1  dev-all.ps1  dev-all.sh  dev-prepare.ps1  dev-prepare.sh  dev-server.ps1  dev-server.sh  dev-tauri.ps1  dev-tauri.sh  dev-web.ps1  dev-web.sh  fix-encoding.ps1  fix-encoding.sh  gen-rtm.ps1  gen-rtm.sh  pnpm.ps1  release-gate.ps1  release-gate.sh
templates/: README.md
templates/source/: README.md  stub_source.rs
tools/virt-peer/: Cargo.toml
tools/virt-peer/src/: main.rs  scenario.rs  transcript.rs
tools/virt-peer/src/transport/: mod.rs  serial.rs  tcp.rs
tools/virt-peer/tests/: tcp_wss_e2e.rs
web/: .gitignore  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  playwright.realbackend.config.ts  realBackend.global-setup.ts  realBackend.global-teardown.ts  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  env.d.ts  main.tsx  styles.css
web/src/adapters/: annotations.ts  sessionExport.ts  sessionExportZip.ts  wss.ts
web/src/i18n/: en.json  (+2 more)
(+78 files in other folders)
