[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/server",
    "crates/replay",
]
# The Tauri shell has its own non-workspace Cargo.toml so that
# `cargo build --workspace` does not require the Tauri toolchain.
exclude = [
    "app-tauri/src-tauri",
]

[workspace.package]
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wanlogger/wanlogger"
authors = ["wanlogger contributors"]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow practical lints that fight the architecture
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
# async
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"
# bytes / encoding
bytes = "1.6"
encoding_rs = "0.8"
# serde / formats
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rmp-serde = "1.3"
# time
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
# logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# error
thiserror = "1.0"
anyhow = "1.0"
# ids
uuid = { version = "1.10", features = ["v4", "serde"] }
# crypto / tls
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2"
argon2 = "0.5"
# network / web
axum = { version = "0.7", features = ["ws", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
# cli
clap = { version = "4", features = ["derive", "env"] }
# misc
parking_lot = "0.12"
dashmap = "6"
# serial
tokio-serial = "5.4"
serialport = "4.3"
# compression
zstd = "0.13"
# secrets
keyring = "2"
