[package]
name = "tracemux-tauri"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "TraceMux Tauri 2 desktop shell."

[lib]
name = "tracemux_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unsafe_code = "deny"
