[package]
name = "tracemux-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "tracemux CLI / server / Tauri sidecar binary"

[lints]
workspace = true

[[bin]]
name = "tracemux"
path = "src/main.rs"

[features]
default = []
desktop = []
metrics = ["tracemux-core/metrics", "tracemux-server/metrics"]
serial = ["tracemux-core/serial", "tracemux-server/serial"]
pcap-capture = ["tracemux-core/pcap-capture", "tracemux-server/pcap-capture"]
headless = []

[dependencies]
tracemux-core = { path = "../core" }
tracemux-server = { path = "../server" }
tracemux-replay = { path = "../replay" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serialport = { workspace = true }
toml = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
rmpv = { workspace = true }
tokio-tungstenite = "0.24"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
bytes = { workspace = true }
