[package]
name = "wanlogger-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core library for wanlogger: frozen v0.1 traits + impls"

[lints]
workspace = true

[features]
default = []
metrics = []
serial = ["dep:tokio-serial"]
visa-vxi11 = []
visa-nivisa = []

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
encoding_rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rmp-serde = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
zstd = { workspace = true }
crc32fast = { workspace = true }
keyring = { workspace = true }
tokio-serial = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
serialport = { workspace = true }
tempfile = { workspace = true }
