[package]
name = "wanlogger-replay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "wanlogger session-dir replay engine"

[lints]
workspace = true

[dependencies]
wanlogger-core = { path = "../core" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
